# yatb

./: .flake8  .gitignore  404.html  Dockerfile.production  Dockerfile.test  README.md  cli.py  docker-compose.yml  flag_generator.py  index.html  main.py  mkdocs.yml  production.md  pyproject.toml  pytest.ini  requirements-cli.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml  yatb.env  yatb.example.env  yatb_production.env
.github/workflows/: mkdocs.yml
app/: __init__.py  auth.py  config.py  main.py  ws.py
app/api/: __init__.py  api_auth.py  api_tasks.py  api_users.py
app/api/admin/: __init__.py  admin_tasks.py  admin_users.py
app/cli/: __init__.py  base.py  client.py  models.py
app/cli/cmd/: __init__.py  get.py  load.py  stress.py
app/db/: __init__.py  beanie.py  db_tasks.py  db_users.py
app/schema/: __init__.py  ebasemodel.py  flags.py  scoring.py  task.py  user.py
app/schema/auth/: __init__.py  auth_base.py  oauth.py  simple.py  tg.py  token_auth.py
app/test/: __init__.py  test_auth.py  test_main.py  test_tasks_api.py
app/utils/: __init__.py  alb1or1x_shit.py  log_helper.py  md.py  metrics.py  tg.py
app/view/: __init__.py
app/view/admin/: __init__.py
app/view/static/: admin.css  api_magic.js  easy_mde_runner.js  id_resolver.js  signin.css  style.css  toast.js
app/view/templates/: about.jhtml  base.jhtml  dockyard.jhtml  login.jhtml  macro.jhtml  scoreboard.jhtml  task.jhtml  tasks.jhtml
app/view/templates/admin/: base.jhtml  index.jhtml  macro.jhtml  tasks_admin.jhtml  users_admin.jhtml
config/: index.html
docs/: config.md  index.md  release-notes.md
docs/hacking/: index.md
hacking/: index.html
nginx/: Caddyfile  yatb.conf
release-notes/: index.html
search/: search_index.json
