[project]
name = "YATB"
version = "0.6.1a0"

description = "Yet another fast and furious jeopardy-CTF taskboard"

authors = [
    { name = "Rubikoid", email = "rubikoid@kksctf.ru" },
    { name = "Maxim Anfinogenov", email = "anfinogenov@kksctf.ru" },
]

license = "Apache-2.0"

readme = "README.md"

requires-python = ">=3.11"

keywords = ["ctf", "jeopardy", "ctf-platform", "fastapi"]

classifiers = ["Topic :: Software Development"]

[project.urls]
homepage = "https://github.com/kksctf/yatb"
repository = "https://github.com/kksctf/yatb"
documentation = "https://github.com/kksctf/yatb"

# black config enabled.
[tool.black]
line-length = 120
target_version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
line-length = 120

# no thanks, i can fix it myself
fix = false

# python 3.10 target?
target-version = "py311"

task-tags = ["TODO", "FIXME", "WTF", "XXX"]

# rules...
select = ["ALL"]
ignore = [
    "ANN101", #   | ruff?                 | Missing type annotation for `self` in method                            # non sense
    "D100",   #   | pydocstyle            | Missing docstring in public module                                      # meh
    "D101",   #   | pydocstyle            | Missing docstring in public class                                       # meh
    "D102",   #   | pydocstyle            | Missing docstring in public method                                      # meh
    "D103",   #   | pydocstyle            | Missing docstring in public function                                    # meh
    "D104",   #   | pydocstyle            | Missing docstring in public package                                     # meh
    "D105",   #   | pydocstyle            | Missing docstring in magic method                                       # meh
    "D106",   #   | pydocstyle            | Missing docstring in public nested class                                # meh
    "D107",   #   | pydocstyle            | Missing docstring in `__init__`                                         # meh
    "D200",   #   | pydocstyle            | One-line docstring should fit on one line                               # don't like it
    "D202",   #   | pydocstyle            | No blank lines allowed after function docstring (found 1)               # don't like it
    "D203",   #   | pydocstyle            | 1 blank line required before class docstring                            # don't like it
    "D205",   #   | pydocstyle            | 1 blank line required between summary line and description              # don't like it
    "EM102",  #   | ruff?                 | Exception must not use an f-string literal, assign to variable first    # i care, but not this proj
    "F401",   #   | pyflakes              | %r imported but unused                                                  # pylance cover it
    "TID252", #   | flake8-tidy-imports   | Relative imports are banned                                             # no.
    "TRY003", #   | ruff?                 | Avoid specifying long messages outside the exception class              # i care, but not this proj
]


[tool.pytest.ini_options]
addopts = "--pyargs app --cov=app"
env = ["YATB_DEBUG=True", "ENABLE_METRICS=false"]
filterwarnings = ["ignore::DeprecationWarning"]
